# openrouter-free

./: AGENTS.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
.trae/skills/openrouter-llm/: SKILL.md
docs/: development.md  installation.md  release.md
src/: main.rs
