[package]
name = "openrouter-free"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
indicatif = "0.17"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true
