[package]
name = "openrouter-free"
version = "0.1.2"
edition = "2024"
description = "A fast CLI tool to browse free models on OpenRouter"
homepage = "https://github.com/i-rs/openrouter-free"
repository = "https://github.com/i-rs/openrouter-free"
license = "MIT"
keywords = ["openrouter", "cli", "llm", "ai"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
indicatif = "0.17"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
