[package]
description = "A fast CLI tool to browse free models on OpenRouter"
edition = "2024"
homepage = "https://github.com/i-rs/openrouter-free"
keywords = ["openrouter", "cli", "llm", "ai"]
license = "MIT"
name = "openrouter-free"
repository = "https://github.com/i-rs/openrouter-free"
version = "0.1.3"

[dependencies]
clap = {version = "4.5", features = ["derive"]}
indicatif = "0.18.4"
reqwest = {version = "0.13.3", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.40", features = ["rt-multi-thread", "macros"]}

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
